@@ -1,4 +1,5 @@
 xine-lib (1.1.17) 2009-??-??
+  * Add support for Matroska SIMPLEBLOCK.
 
 xine-lib (1.1.16.3) 2009-04-03
   * Security fixes:
